--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,26 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
+  server:
+    build:
+      context: .
+      dockerfile: server/Dockerfile
     ports:
       - "5001:5001"
     volumes:
-      - .:/app
+      - ./server:/app/server
+      - node_modules:/app/node_modules
+    environment:
+      - NODE_ENV=development
+
+  client:
+    build:
+      context: .
+      dockerfile: client/Dockerfile
+    ports:
+      - "3333:3333"
+    volumes:
+      - ./client:/app/client
       - node_modules:/app/node_modules
     environment:
       - NODE_ENV=development
