--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,8 @@ services:
     ports:
       - "5001:5001"
     volumes:
-      - ./server:/app/server
-      # Pour éviter des problèmes avec node_modules, commentez la ligne suivante en prod
-      - node_modules:/app/node_modules
+      - ./server:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=development
 
@@ -21,9 +20,8 @@ services:
     ports:
       - "3333:3333"
     volumes:
-      - ./client:/app/client
-      # Pour éviter des problèmes avec node_modules, commentez la ligne suivante en prod
-      - node_modules:/app/node_modules
+      - ./client:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=development
 
