--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,24 @@
 version: '3.8'
 
 services:
-  server:
-    build:
-      context: .
-      dockerfile: server/Dockerfile
-    ports:
-      - "5001:5001"
-    volumes:
-      - ./server:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
-
   client:
     build:
       context: .
-      dockerfile: client/Dockerfile
+      dockerfile: Dockerfile
+    working_dir: /usr/src/app/client
+    command: ["pnpm", "run", "dev"]
     ports:
       - "3333:3333"
     volumes:
-      - ./client:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
+      - ./client:/usr/src/app/client
 
-volumes:
-  node_modules:
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    working_dir: /usr/src/app/server
+    command: ["pnpm", "run", "start"]
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./server:/usr/src/app/server
