--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,20 @@ version: '3.8'
 services:
   client:
     build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /usr/src/app/client
-    command: ["pnpm", "run", "dev"]
+      context: ./client
     ports:
-      - "3333:3333"
-    volumes:
-      - ./client:/usr/src/app/client
+      - "3333:80"   # Mapping du port 3333 sur l'hôte vers le port 80 du container
+    networks:
+      - app-network
 
   server:
     build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /usr/src/app/server
-    command: ["pnpm", "run", "start"]
+      context: ./server
     ports:
-      - "5001:5001"
-    volumes:
-      - ./server:/usr/src/app/server
+      - "5001:5001"  # Mapping du port 5001 sur l'hôte vers le port 5001 du container
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
