--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,23 +1,23 @@
-# Étape 1 : Build de l'application React
-FROM node:16 AS build
+# Step 1: Build the React application
+FROM node:18 AS build
 
 WORKDIR /app
 
-# Copier package.json et installer les dépendances
+# Copy package.json and install dependencies
 COPY package*.json ./
 RUN npm install
 
-# Copier tous les fichiers et construire l'application
+# Copy all files and build the application
 COPY . .
-RUN npm run dev
+RUN npm run build
 
-# Étape 2 : Serveur Nginx pour servir l'application React
+# Step 2: Nginx server to serve the React application
 FROM nginx:alpine
 
-# Copier les fichiers buildés dans le répertoire Nginx
+# Copy the built files to the Nginx directory
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Exposer le port 3333
+# Expose port 3333
 EXPOSE 3333
 
 CMD ["nginx", "-g", "daemon off;"]
