--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,9 +15,9 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy the built files to the Nginx directory
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expose port 3333
-EXPOSE 3333
+# Expose port 80
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
